--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -128,7 +128,7 @@ ul li {
       &::after {
         content: "";
         position: absolute;
-        top: 16rem;
+        top: 17rem;
         left: 0;
         height: 1px;
         width: 100%;
@@ -147,7 +147,7 @@ ul li {
     }
 
     &__links {
-      padding-top: 1rem;
+      padding-top: 3rem;
       letter-spacing: 3px;
 
       ul li {
@@ -170,7 +170,7 @@ ul li {
     }
 
     &__address {
-      padding: 1rem;
+      padding: 1rem 0;
       font-size: 14px;
 
       h4 {
@@ -179,7 +179,7 @@ ul li {
     }
 
     &__contact {
-      padding: 1rem;
+      padding: 1rem 0;
       font-size: 14px;
 
       h4 {
@@ -188,10 +188,11 @@ ul li {
     }
 
     &__social {
-      padding: 1rem;
+      padding-top: 1rem;
+      padding-bottom: 2rem;
 
       a {
-        padding: 0.8rem;
+        padding: 0 0 1rem 1rem;
         color: $primary-color-peach;
         font-size: 14px;
       }
